Traduccion de home

--- a/src/assets/i18n/esp.json
+++ b/src/assets/i18n/esp.json
@@ -1,3 +1,28 @@
 {
-    "herramientas": "Herramientas para ti"
+    "herramientas": "Herramientas para ti",
+    "bienvenidx": "Bienvenid@",
+    "aMiradaJoven": "a Mirada Joven",
+    "leer": "Leer",
+    "preguntaValida": "Cualquier pregunta es válida",
+    "granEquipoMedico": "Un gran equipo médico  responderá  a tus dudas de forma confidencial y certera.",
+    "preguntar" : "Preguntar",
+    "lineaAyuda": "Línea de ayuda OrientaSEX",
+    "informacionGratuita": "Infórmate de manera gratuita y confidencial: ¡es la mejor forma de prevenir!",
+    "llamar": "Llamar",
+    "lineaTelefonica": "Línea telefónica",
+    "resolverDudas": "Resuelve tus dudas sobre salud sexual y reproductiva.",
+    "lineaEmergencia": "Línea de emergencia para hombres",
+    "durantePeriodo": "Si durante este periodo de cuarentena en casa, te sientes enojado, frustrado, molesto, triste o en tensión. Llama a GENDES, disponible las 24 horas.",
+    "serviciosSalud": "Servicios de salud cerca de ti",
+    "encuentraServicio": "Encuentra un servicio amigable de salud sexual especializado en jóvenes como tú.",
+    "ubicar": "Ubicar",
+    "calendarioMenstrual": "Calendario menstrual",
+    "calcularDiasFertiles": "Calcula cuales son los días fértiles o de ovulación.",
+    "calcular": "Calcular",
+    "seguir": "¡Síguenos!",
+    "generacionJovenes": "¡Somos la mayor generación de jóvenes!",
+    "escucharTuVoz": " Queremos que tu voz sea escuchada y tomada en cuenta. Cuéntanos tus ideas y preocupaciones: juntos podemos propiciar el cambio.",
+    "palabrasFranciscoGarcia": "En Mirada Joven encontré respuestas a mis dudas sobre sexualidad y me he sentido mucho mejor.",
+    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social."
+
 }
