--- a/src/assets/i18n/nahua.json
+++ b/src/assets/i18n/nahua.json
@@ -1,3 +1,27 @@
 {
-    "herramientas": "Herramientas para ti(Nahua)"
+    "herramientas": "Herramientas para ti(Nahua)",
+    "bienvenidx": "Bienvenid@(Nahua)",
+    "aMiradaJoven": "a Mirada Joven(Nahua)",
+    "leer": "Leer(Nahua)",
+    "preguntaValida": "Cualquier pregunta es válida(Nahua)",
+    "granEquipoMedico": "Un gran equipo médico  responderá  a tus dudas de forma confidencial y certera.(Nahua)",
+    "preguntar" : "Preguntar(Nahua)",
+    "lineaAyuda": "Línea de ayuda OrientaSEX(Nahua)",
+    "informacionGratuita": "Infórmate de manera gratuita y confidencial: ¡es la mejor forma de prevenir!(Nahua)",
+    "llamar": "Llamar(Nahua)",
+    "lineaTelefonica": "Línea telefónica(Nahua)",
+    "resolverDudas": "Resuelve tus dudas sobre salud sexual y reproductiva.(Nahua)",
+    "lineaEmergencia": "Línea de emergencia para hombres(Nahua)",
+    "durantePeriodo": "Si durante este periodo de cuarentena en casa, te sientes enojado, frustrado, molesto, triste o en tensión. Llama a GENDES, disponible las 24 horas.(Nahua)",
+    "serviciosSalud": "Servicios de salud cerca de ti(Nahua)",
+    "encuentraServicio": "Encuentra un servicio amigable de salud sexual especializado en jóvenes como tú.(Nahua)",
+    "ubicar": "Ubicar(Nahua)",
+    "calendarioMenstrual": "Calendario menstrual(Nahua)",
+    "calcularDiasFertiles": "Calcula cuales son los días fértiles o de ovulación.(Nahua)",
+    "calcular": "Calcular(Nahua)",
+    "seguir": "¡Síguenos!(Nahua)",
+    "generacionJovenes": "¡Somos la mayor generación de jóvenes!(Nahua)",
+    "escucharTuVoz": " Queremos que tu voz sea escuchada y tomada en cuenta. Cuéntanos tus ideas y preocupaciones: juntos podemos propiciar el cambio.(Nahua)",
+    "palabrasFranciscoGarcia": "En Mirada Joven encontré respuestas a mis dudas sobre sexualidad y me he sentido mucho mejor.(Nahua)",
+    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social.(Nahua)"
 }
