--- a/src/assets/i18n/esp.json
+++ b/src/assets/i18n/esp.json
@@ -23,6 +23,11 @@
     "generacionJovenes": "¡Somos la mayor generación de jóvenes!",
     "escucharTuVoz": " Queremos que tu voz sea escuchada y tomada en cuenta. Cuéntanos tus ideas y preocupaciones: juntos podemos propiciar el cambio.",
     "palabrasFranciscoGarcia": "En Mirada Joven encontré respuestas a mis dudas sobre sexualidad y me he sentido mucho mejor.",
-    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social."
-
+    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social.",
+    "nuestrosAliados": "Nuestros aliados/as",
+    "acercaDe": "Acerca de Mirada Joven",
+    "concursoExpresion": "Concurso de Expresión",
+    "politicasPrivacidad": "Políticas de privacidad",
+    "avisoPrivacidad": "Aviso de privacidad",
+    "contactar": "Contáctanos:"
 }
