--- a/src/assets/i18n/nahua.json
+++ b/src/assets/i18n/nahua.json
@@ -23,5 +23,11 @@
     "generacionJovenes": "¡Somos la mayor generación de jóvenes!(Nahua)",
     "escucharTuVoz": " Queremos que tu voz sea escuchada y tomada en cuenta. Cuéntanos tus ideas y preocupaciones: juntos podemos propiciar el cambio.(Nahua)",
     "palabrasFranciscoGarcia": "En Mirada Joven encontré respuestas a mis dudas sobre sexualidad y me he sentido mucho mejor.(Nahua)",
-    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social.(Nahua)"
+    "palabrasJuanGonzalez": "Me gusta que no solamente hablen de sexualidad, si no que hay contenidos para que los jóvenes podamos ser agentes de cambio social.(Nahua)",
+    "nuestrosAliados": "Nuestros aliados/as(Nahua)",
+    "acercaDe": "Acerca de Mirada Joven(Nahua)",
+    "concursoExpresion": "Concurso de Expresión(Nahua)",
+    "politicasPrivacidad": "Políticas de privacidad(Nahua)",
+    "avisoPrivacidad": "Aviso de privacidad(Nahua)",
+    "contactar": "Contáctanos:"
 }
