--- a/src/assets/i18n/nahua.json
+++ b/src/assets/i18n/nahua.json
@@ -29,5 +29,36 @@
     "concursoExpresion": "Concurso de Expresión(Nahua)",
     "politicasPrivacidad": "Políticas de privacidad(Nahua)",
     "avisoPrivacidad": "Aviso de privacidad(Nahua)",
-    "contactar": "Contáctanos:"
+    "contactar": "Contáctanos:(Nahua)",
+
+
+
+
+    "serviciosAmigables":"Servicios amigables de Salud Sexual y Reproductiva(Nahua)",
+    "acercateServicio": "¡Acércate, este servicio es para ti!(Nahua)",
+    "acercateServicioComplemento": "¡Acércate, este servicio es para ti! Un servicio de salud amigable ofrece una serie de servicios preventivos para las y los adolescentes y jóvenes como tú. Cuenta con un paquete básico de servicios como la disponibilidad de anticonceptivos, consejería, servicios de detección de infecciones de transmisión sexual (ITS), incluyendo la detección del VIH y el embarazo.(Nahua)",
+    "estosServicios": "Estos servicios cuentan con accesibilidad en horarios y ubicación en un ambiente de respeto a tus derechos, tus decisiones y tu autonomía.(Nahua)",
+    "turno": "TURNO:(Nahua)",
+    "distanciaUbicacion": "km de tu ubicación(Nahua)",
+    "tipoAtencion": "TIPO DE ATENCIÓN(Nahua)",
+    "orientacion": "ORIENTACIÓN(Nahua)",
+    "consejera": "CONSEJERA(Nahua)",
+    "atencion": "ATENCIÓN(Nahua)",
+    "psicologica": "PSICOLOGICA(Nahua)",
+    "medica": "MEDICA(Nahua)",
+    "platicas": "PLÁTICAS(Nahua)",
+    "enSSRA": "EN SSRA(Nahua)",
+    "talleres": "TALLERES(Nahua)",
+    "entregaDe": "ENTREGA DE(Nahua)",
+    "anticonceptivos": "ANTICONCEPTIVOS(Nahua)",
+    "atencionDe": "ATENCIÓN DE(Nahua)",
+    "embarazadas": "EMBARAZADAS(Nahua)",
+    "deteccionDe": "DETECCIÓN DE(Nahua)",
+    "its": "ITS(Nahua)",
+    "informacionBrindada": "LA INFORMACIÓN Y/O ATENCIÓN QUE EL CENTRO TE BRINDÓ FUE:(Nahua)",
+    "compartirOpinion": "¡Gracias por compartirnos tu opinión!(Nahua)",
+    "ayudarMejorar": "Para nosotros son muy importantes tus comentarios ya que nos ayudan a mejorar(Nahua)",
+    "otra": "OTRA"
+
+
 }
