--- a/src/assets/i18n/esp.json
+++ b/src/assets/i18n/esp.json
@@ -31,9 +31,6 @@
     "avisoPrivacidad": "Aviso de privacidad",
     "contactar": "Contáctanos:",
 
-
-
-
     "serviciosAmigables":"Servicios amigables de Salud Sexual y Reproductiva",
     "acercateServicio": "¡Acércate, este servicio es para ti!",
     "acercateServicioComplemento": "¡Acércate, este servicio es para ti! Un servicio de salud amigable ofrece una serie de servicios preventivos para las y los adolescentes y jóvenes como tú. Cuenta con un paquete básico de servicios como la disponibilidad de anticonceptivos, consejería, servicios de detección de infecciones de transmisión sexual (ITS), incluyendo la detección del VIH y el embarazo.",
@@ -60,13 +57,63 @@
     "ayudarMejorar": "Para nosotros son muy importantes tus comentarios ya que nos ayudan a mejorar",
     "otra": "OTRA",
 
-
-
     "acercaMiradaJoven": "Acerca de Mirada Joven",
     "miradaJovenNacio": "Mirada Joven nació como un proyecto de información y comunicación dirigido a adolescentes y jóvenes que contribuyan a la toma de decisiones libres, responsables e informadas para el ejercicio pleno de sus derechos sexuales y reproductivos. ",
     "construirPlataforma": "Buscamos construir una plataforma digital pensada por jóvenes y para jóvenes con el objetivo de ofrecer información clara, científica y oportuna, que desde un enfoque integral que abarque temáticas relevantes para el desarrollo pleno de las juventudes como: manejo de las emociones, salud mental, acciones de prevención contra la violencia de género y la violencia digital, reflexión sobre las masculinidades, diversidades sexuales, participación juvenil para contribuir al impulso de una agenda de desarrollo sostenible, emprendimiento y plan de vida.",
     "facilitarAcceso": " Además, Mirada Joven aspira facilitar un acceso adecuado a servicios de salud sexual para jóvenes y adolescentes que sea adecuado a sus edades y contextos.",
     "poblacionDeMas": "Con una población de más de 38 millones de jóvenes, de entre 12 y 29 años, consideramos primordial abrir espacios donde sus voces sean escuchadas y se promueva la participación y el diálogo. Mirada Joven anhela ser la plataforma número uno en impulsar e inspirar a las juventudes en convertirse en agentes de cambio que causen impactos positivos en su entorno inmediato.",
     "esUnProyecto": "Mirada Joven es un proyecto que cuenta con el aporte técnico, supervisión y apoyo de diferentes organismos nacionales, estatales, internacionales y del sector privado: Fondo de Población de las Naciones Unidas (UNFPA), Fundación Mexicana para la Planificación Familiar (MEXFAM), Population Media Center, Fundación México Vivo, Fundación Televisa, Consejo Nacional de Población (CONAPO), 1doc3, Flow, ConstruyeT, Instituto de Liderazgo Simone de Beauvoir, Género y Desarrollo AC (GENDES), Balance y Colectiva Luchadoras AC.",
-    "cualquierContenido": "Cualquier contenido, opiniones o mensajes expresados en esta plataforma no necesariamente representan posiciones oficiales de cada una de las instituciones que participan en esta iniciativa. Asimismo, cualquier contenido, opinión o mensaje expresado en las plataformas o redes sociales de nuestros aliados no necesariamente representan posiciones oficiales por parte de Mirada Joven y el resto de los demás aliados y socios."
+    "cualquierContenido": "Cualquier contenido, opiniones o mensajes expresados en esta plataforma no necesariamente representan posiciones oficiales de cada una de las instituciones que participan en esta iniciativa. Asimismo, cualquier contenido, opinión o mensaje expresado en las plataformas o redes sociales de nuestros aliados no necesariamente representan posiciones oficiales por parte de Mirada Joven y el resto de los demás aliados y socios.",
+
+    "ahoraDisponible": "¡Ahora Disponible en Nahuatl!",
+
+    "politicaPrivacidad": "Política de Privacidad",
+    "esUnProyectoCocreacion": "Mirada Joven es un proyecto en cocreación que cuenta con el aporte técnico, supervisión y apoyo de diferentes organismos estatales, internacionales y sector privado en México.",
+    "politicaPrivacidadEstablece": "La política de privacidad establece cómo Mirada Joven usa y protege cualquier información que es suministrada por usted. Respetamos su privacidad y estamos comprometidos con la protección de su información personal. Esta política de privacidad explica cómo recopilamos, transferimos, procesamos, usamos y divulgamos sus datos personales, y establece nuestras prácticas seguras.",
+    "todoElAplicativo": "Todo el aplicativo se ha desarrollado utilizando “open software” y nos hemos adherido a cada una de sus licencias de uso, desarrollo y privacidad.",
+    "loQueRecolectamos": "Lo que recolectamos",
+    "miradaJovenRecolecta": "Mirada Joven Recolecta datos generales de uso del aplicativo y solo hacemos esto cuando usted ha aceptado nuestra solicitud para recopilar esa información. La aplicación no recolecta información personal.",
+    "miradaJovenRecopila": "Mirada Joven recopila automáticamente datos de localización GPS, proveedor del servicio de telefonía móvil, y sistema operativo móvil. Agregamos esta información para entender cómo nuestros visitantes usan la aplicación móvil de manera que podamos mejorarla al igual que los servicios que ofrecemos. Los datos de localización GPS no identifican a los usuarios individuales.",
+    "politicaPrivacidadMiradaJoven": "Políticas de Privacidad de Mirada Joven",
+    "primerCompromiso": "1. Compromiso de Mirada Joven",
+    "sabemosQueSuPrivacidad": "Sabemos que su privacidad es importante para usted, así como para nosotros. En tal virtud, en Mirada Joven nunca daremos su correo electrónico o su información personal a nadie. Asimismo, ningún tercero ajeno a Mirada Joven podrá acceder en ningún caso directamente, sin el consentimiento expreso del usuario personal para cada ocasión, a sus datos personales.",
+    "miradaJovenSeCompromete": "Mirada Joven se compromete al cumplimiento de su obligación de protección de los datos de carácter personal y de su deber de guardarlos, y de adoptar las medidas necesarias para evitar su alteración, pérdida, tratamiento o acceso no autorizado, de acuerdo con lo establecido por la Ley No. 172-13.",
+    "leyOrganica": "2. Ley Orgánica de Protección de Datos",
+    "aEfectosDeLaLey": "A efectos de la Ley No. 172-13 Mirada Joven informa al usuario de la existencia de archivos de datos de carácter personal creados por y para Mirada Joven y bajo su responsabilidad, con la finalidad de administrar su relación con sus usuarios.",
+    "datosQueRequerimos": "3. Datos que requerimos para utilizar las preguntas y respuestas en Mirada Joven",
+    "alMomentoDeHacer": "Al momento de hacer una pregunta, la persona usuaria que quiera hacer uso de los servicios de Mirada Joven deberá proporcionar los siguientes datos y declarar que son veraces en la medida de su conocimiento:",
+    "edad": "Edad;",
+    "genero": "Género; y",
+    "direccionDeCorreo": "Dirección de correo electrónico (e-mail).",
+    "derechoDeAcceso": "4. Derecho de acceso, rectificación, oposición y cancelación",
+    "comoUsuarioTitular": "Como usuario titular de los datos personales podrás ejercer los derechos de acceso, rectificación, oposición y cancelación enviando un correo electrónico (e-mail) a Mirada Joven hola@miradajoven.org, indicando en el asunto “cancelación de datos personales”.",
+    "formularios": "5. Formularios",
+    "datosQueProporciones": "Los datos que nos proporciones en los formularios serán utilizados exclusivamente para atender a las consultas que nos quieras plantear por ese medio.",
+    "seguridad": "6. Seguridad.",
+    "miradaJovenUtiliza": "Mirada Joven utiliza garantías físicas, administrativas y técnicas comercialmente razonables para preservar la integridad y seguridad de su información personal. Para proteger los datos que almacenamos en nuestros servidores, Mirada Joven regularmente realiza auditorías de sus sistemas para detectar posibles vulnerabilidades y ataques. Sin embargo, puesto que el Internet no es un entorno cien por ciento seguro, no podemos asegurar o garantizar la seguridad de ninguna información que usted transmita a Mirada Joven o la garantía de que su información en los servicios no se pueden acceder, revelar, alterar o destruir por el incumplimiento de cualquiera de nuestras medidas de seguridad físicas, técnicas o de gestión. En caso de que información personal se vea comprometida como consecuencia de una violación de la seguridad, Mirada Joven notificará tan pronto tenga conocimiento de la misma a las personas cuya información personal ha sido comprometida, de acuerdo con los procedimientos de notificación establecidos en esta Política de Privacidad, o según lo requiera la ley aplicable.",
+    "cambiosAEsta": "7. Cambios a esta Política de Privacidad",
+    "podemosActualizar": "Podemos actualizar esta Política de Privacidad y políticas de cookies en cualquier momento, con o sin previo aviso. En el caso de que haya cambios significativos publicaremos esos cambios para mantenerlo al tanto de qué información recogemos, cómo la usamos y bajo qué circunstancias podemos revelarla. Los cambios en esta Política de Privacidad serán efectivos una vez se publiquen.",
+    "sobreDoc": "8. Sobre 1Doc3",
+    "miradaJovenInstitucion": "Mirada Joven utiliza como institución aliada a la compañía 1Doc3, para leer su política de privacidad, favor entrar a https://www.1doc3.com/web/politicas.",
+    "firebaseUtiliza": "9- De Firebase se utiliza:",
+    "descargoDeResponsabilidad": "10- Descargo de responsabilidad",
+    "usoLogotipos": "El uso de logotipos o iconos que refieran a Facebook, WhatsApp, Instagram o Twitter —entre otras redes sociales, webs, foros, chats o medios digitales— funcionan únicamente como enlaces a las plataformas cuyas políticas, usos y condiciones se rigen de acuerdo con las políticas internacionales de sus propietarios y sobre las cuales Mirada Joven no tiene ningún tipo de control.",
+    "cualquierContenidoOpinion": "Cualquier contenido, opinión o mensajes expresados en las plataformas de medios sociales de Mirada Joven —incluidos blogs, perfiles de redes sociales, así como la página web Mirada Joven, entre otros— representan los pensamientos de los usuarios individuales y las comunidades en línea, y no necesariamente los de Mirada Joven o cualquiera de sus socios corporativos, aliados, afiliados o cualquiera de sus respectivos directores, funcionarios, empleados, personal o miembros de su respectiva junta directiva.",
+    "losEspaciosEnLasRedes": "Los espacios en las redes sociales de Mirada Joven tienen como objetivo principal difundir contenido educativo sobre salud sexual y reproductiva, salud mental, cuestiones de género, participación juvenil y cualquier otro tema relevante para fomentar el desarrollo integral de los usuarios que consulten el material.",
+    "cualquierComentario": "Cualquier comentario que Mirada Joven identifique en sus redes sociales o sitio web de otra índole podrá ser removido sin previo aviso al usuario, y sin responsabilidad para Mirada Joven, por lo que quedan establecidos como criterios inaceptables para la plataforma y medios sociales:",
+    "elUsoDe": "El uso de palabras altisonantes y lenguaje o tono no adecuados a este espacio.",
+    "losContenidos": "Los contenidos de carácter racista, xenófobo, pornográfico, de apología del terrorismo o que atenten contra los derechos humanos.",
+    "atenteContraDerechos": "Difundir, transmitir o poner a disposición de terceros cualquier tipo de información, elemento o contenido que atente contra los derechos fundamentales y las libertades públicas reconocidos constitucionalmente y en los tratados internacionales.",
+    "publicidadIlicita": "Difundir, transmitir o poner a disposición de terceros cualquier tipo de información, elemento o contenido que constituya publicidad ilícita o desleal.",
+    "contenidosFalsos": "Introducir o difundir cualquier información y contenidos falsos, ambiguos o inexactos de forma que desinforme a la comunidad o tienda al discurso de odio.",
+    "elUsuarioSera": "El usuario será el único responsable de los daños o perjuicios que se produzcan como consecuencia de un incumplimiento de estos criterios.",
+    "noSeraResponsable": "Mirada Joven no será en ningún caso responsable de ninguna persona o entidad por los daños directos, indirectos o consecuentes relacionados con el uso de la página web o su contenido o el de las páginas web vinculadas.",
+    "ofreceEnlaces": "Mirada Joven ofrece enlaces a otros sitios Web que entendemos que pueden ser de utilidad para los usuarios. En los mencionados enlaces no se aplica los términos y condiciones de esta política de privacidad y confidencialidad por tanto la inclusión no implica obligación por parte de Mirada Joven de acceder a los productos o servicios que en ellas se anuncian o venden.",
+    "mensajesExpresados": "Los contenidos, opiniones o mensajes expresados por medios digitales de Mirada Joven no reflejan en modo alguno los puntos de vista del sitio web en el que originalmente se publicaron ni de otros sitios afiliados al sitio ni del personal de Mirada Joven que participa en el mantenimiento del sitio web o redes sociales o de cualquier miembro de este.",
+    "usuarioEnlaza": "Si el usuario enlaza el sitio web o los contenidos de las redes sociales en cualquier otra web, foro, chat, plataforma o red social de terceros, Mirada Joven no es responsable de los datos o contenidos que proporcionen.",
+    "alEnviar": "Al enviar o compartir contenido (definido como materiales, consejos, representaciones, opiniones y puntos de vista) a cualquiera de los sitios o plataformas de medios sociales de Mirada Joven, usted entiende y reconoce que esta información está disponible para el público, y que está permitiendo que Mirada Joven y sus clubes miembros, tengan un derecho permanente a utilizar sus comentarios para fines comerciales de Mirada Joven incluyendo, pero no limitándose a, promociones internas y externas.",
+    "podriaIncluirElUso": "Esto podría incluir el uso, la republicación, la reproducción, la distribución, el cambio o la exhibición de los comentarios en los productos de la marca Mirada Joven y en otros sitios web sin restricción alguna desde el momento de su envío a perpetuidad, o conforme la legislación en turno lo establezca.",
+    "losDatosProporcionados": "Los datos proporcionados por el usuario en nuestra redes sociales y/o sitio web no serán usados para crear listas de contactos que hagan distribuciones masivas de correo electrónico.",
+    "alEntrarAlSitio": "Al entrar al sitio web o redes sociales de Mirada Joven y sus aliados aceptas el uso de nuestras cookies, las cuales nos permiten mejorar nuestra estrategia de comunicación.",
+    "variosIconos": "Varios iconos usados en el sitio web fueron diseñados por https://www.flaticon.es/, la autoría de los mismos se atribuye a sus respectivos creadores. Los iconos empleados son de uso gratuito acorde con la Licencia de Flaticon que permite su empleo en proyectos comerciales y personales, medios digitales e impresos, de manera ilimitada y perpetua, en todo el mundo y haciendo modificaciones y trabajos derivados."
 }
