Cambio una letra

--- a/src/assets/i18n/esp.json
+++ b/src/assets/i18n/esp.json
@@ -65,7 +65,7 @@
     "esUnProyecto": "Mirada Joven es un proyecto que cuenta con el aporte técnico, supervisión y apoyo de diferentes organismos nacionales, estatales, internacionales y del sector privado: Fondo de Población de las Naciones Unidas (UNFPA), Fundación Mexicana para la Planificación Familiar (MEXFAM), Population Media Center, Fundación México Vivo, Fundación Televisa, Consejo Nacional de Población (CONAPO), 1doc3, Flow, ConstruyeT, Instituto de Liderazgo Simone de Beauvoir, Género y Desarrollo AC (GENDES), Balance y Colectiva Luchadoras AC.",
     "cualquierContenido": "Cualquier contenido, opiniones o mensajes expresados en esta plataforma no necesariamente representan posiciones oficiales de cada una de las instituciones que participan en esta iniciativa. Asimismo, cualquier contenido, opinión o mensaje expresado en las plataformas o redes sociales de nuestros aliados no necesariamente representan posiciones oficiales por parte de Mirada Joven y el resto de los demás aliados y socios.",
 
-    "ahoraDisponible": "¡Ahora Disponible en Nahuatl!",
+    "ahoraDisponible": "¡Ahora disponible en Nahuatl!",
 
     "politicaPrivacidad": "Política de Privacidad",
     "esUnProyectoCocreacion": "Mirada Joven es un proyecto en cocreación que cuenta con el aporte técnico, supervisión y apoyo de diferentes organismos estatales, internacionales y sector privado en México.",
